# 4GRC

./: README.md
1.各种方向盘的驱动/: joy_test.py
2.串口驱动/: ttl.py
3.各种服务器代码/1.websock/: go_server.go  node_server.js  webserver.py
3.各种服务器代码/1.websock/echo_server/: CMakeLists.txt  Makefile  backCMakeLists.txt  echo_server.cpp  test
3.各种服务器代码/2.客户端/: aliiot2dtu.py  mqtt2dtu.py  serial2dtu.py  tcp2dtu.py
4.我能看到的方案的解析/1.小蓝车/: 小蓝车.xmind
4.我能看到的方案的解析/2.小黄车/: 小黄车.xmind
4.我能看到的方案的解析/3.大仙最新/: 大仙.xmind
4.我能看到的方案的解析/4.小肥羊/: 小肥羊.xmind  开放平台.html
4.我能看到的方案的解析/4.小肥羊/ec20文档/02 Hardware/: Quectel_EC20_R2.1_Footprint&Part_20171214.rar
4.我能看到的方案的解析/4.小肥羊/开放平台_files/: 0.54418881da45740c6db2.js.下载  1.8105dd7352cd0f71fc12.js.下载  13.e8f94eeb88bc10ddf7cb.js.下载  8.8ab7c3f4744a2724f200.js.下载  9.441a0198a63abe963ae7.js.下载  api  app.347dcad25facd0cd2a55.js.下载  app.3689c587d83d07512d1bd5c339da4acf.css  captcha  core.php  getscript  manifest.ca9492136d4c8c48b9fc.js.下载  vendor.5fa3671465f3aee265e7.js.下载  z_stat.php
5.串口转PWM/uart2PWM/: .mxproject  IoInput.ioc
5.串口转PWM/uart2PWM/Core/Src/: main.c  stm32f1xx_hal_msp.c
5.串口转PWM/uart2PWM/MDK-ARM/: IoInput.uvprojx
5.串口转PWM/uart2PWM/MDK-ARM/IoInput/: IoInput.axf  IoInput.hex
5.串口转PWM/uart2PWM_中值1500/: .mxproject  IoInput.ioc
5.串口转PWM/uart2PWM_中值1500/Core/Inc/: main.h
5.串口转PWM/uart2PWM_中值1500/Core/Src/: main.c  stm32f1xx_it.c
5.串口转PWM/uart2PWM_中值1500/MDK-ARM/: IoInput.uvoptx  IoInput.uvprojx
5.串口转PWM/uart2PWM_中值1500/MDK-ARM/IoInput/: IoInput.axf  IoInput.hex
5.串口转PWM/uart2PWM_中值1500TIM/: .mxproject  IoInput.ioc  README.md  删除编译信息文件(缩小体积方便备份).bat
5.串口转PWM/uart2PWM_中值1500TIM/Core/Src/: main.c  stm32f1xx_hal_msp.c
5.串口转PWM/uart2PWM_中值1500TIM/MDK-ARM/: IoInput.uvprojx
5.串口转PWM/uart2PWM_中值1500TIM/MDK-ARM/IoInput/: IoInput.axf  IoInput.hex
5.串口转PWM/uart2PWM_中值1500TIM16PWM/: .mxproject  IoInput.ioc
5.串口转PWM/uart2PWM_中值1500TIM16PWM/Core/Inc/: main.h  stm32f1xx_it.h
5.串口转PWM/uart2PWM_中值1500TIM16PWM/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
5.串口转PWM/uart2PWM_中值1500TIM16PWM/MDK-ARM/: IoInput.uvprojx
5.串口转PWM/uart2PWM_中值1500TIM16PWM/MDK-ARM/IoInput/: IoInput.axf  IoInput.hex
